@@ -1,8 +1,8 @@
 package de.theidler.create_mobile_packages.blocks.bee_port;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.UUID;
 
 public class BeePortEntityTracker implements IBeePortEntityTracker {
     private final List<BeePortBlockEntity> list = new ArrayList<>();
@@ -17,8 +17,24 @@ public class BeePortEntityTracker implements IBeePortEntityTracker {
         list.remove(dpbe);
     }
 
+    /**
+     * Get all BeePortBlockEntities grouped by logistics network.
+     *
+     * @return A map of UUIDs to lists of BeePortBlockEntities.
+     */
     @Override
     public List<BeePortBlockEntity> getAll() {
-        return Collections.unmodifiableList(list);
+        return List.copyOf(list);
+    }
+
+    /**
+     * Get all BeePortBlockEntities for a given logistics network.
+     *
+     * @param logisticsNetworkId The UUID of the logistics network.
+     * @return A list of BeePortBlockEntities.
+     */
+    @Override
+    public List<BeePortBlockEntity> getAllByNetwork(UUID logisticsNetworkId) {
+        return list.stream().filter(dpbe -> dpbe.getLogisticsNetworkId().equals(logisticsNetworkId)).toList();
     }
 }
